fix(OpenCloseBox.jsx) open close overflow / no overflow y

--- a/src/components/parts/OpenCloseBox/OpenCloseBox.css
+++ b/src/components/parts/OpenCloseBox/OpenCloseBox.css
@@ -99,7 +99,7 @@
 .display-container {  
 	transition: width 1s; 
 	background: purple;  
-	/*min-width: 100%;*/
+	min-width: 100%;
 }
 
 .display-container-x-closing-no-overflow {
@@ -118,23 +118,25 @@
 /*	transition: height 2s, width 2s;*/
 	/*  box-sizing: border-box; */
 	
-	transition: height 1s;
+	transition: height 1s, min-height 1s;
 
 	background: pink;   
   border: 0.5em solid blue;
   overflow: hidden;
   box-sizing: border-box; 
-	white-space: nowrap;
+	white-space: nowrap; 
 
-	height: 100%;
+	min-height: 100%; 
 }  
 
 .content-container-x-closed {
-	height: 0 !important;
+	height: 0 !important; 
+	min-height: 0;
 }
 
 .content-container-x-opening {
 	height: 0 !important;
+	min-height: 0;
 }
 
  
